integracao com backend nest.js

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -30,11 +30,12 @@ html {
     --complete:#00B2FF;
     --labelText:#232323;
     --inputColor:#FFFFFF;
+    --textColor:#ffc501;
 }
 
 body{
     font-family: var(--fontPoppins);
-    background-color: #080736;
+    background-color: #03001c;
     color:var(--colorSecond);
 }
 .pill{
